@@ -9,6 +9,7 @@ NEW FEATURES
 (raf) TextUI: Now clock format is still compatible and configurable as in 0.37-Final. New mode added (0). If set to that in the config file, then the format is retrieved from the system configuration. (r752)
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
+(sandberg) Core: [ Bug #6256 ] WiFi logging is always enabled (r754)
 
 0.38-Pre2 (r744) (2006-01-27)
 NEW FEATURES
